...
                                    tabs: [
                                      Tab(
                                        key: ValueKey('LogInTab_2m5e'),
                                        text: 'Log In',
                                      ),
                                      Tab(
                                        key: ValueKey('SignUpTab_0glq'),
                                        text: 'Sign Up',
                                      ),
...
                                                  12.0, 0.0, 12.0, 12.0),
                                          child: Column(
                                            key: ValueKey('SignIn_tc28'),
                                            mainAxisSize: MainAxisSize.max,
                                            crossAxisAlignment:
...
                                                  child: TextFormField(
                                                    key: ValueKey(
                                                        'emailAddress_dacs'),
                                                    controller: _model
                                                        .emailAddressTextController,
...
                                                  child: TextFormField(
                                                    key: ValueKey(
                                                        'password_g4ok'),
                                                    controller: _model
                                                        .passwordTextController,
...
                                                  child: FFButtonWidget(
                                                    key: ValueKey(
                                                        'LoginButton_hzgs'),
                                                    onPressed: () async {
                                                      logFirebaseEvent(
...
                                                  12.0, 0.0, 12.0, 12.0),
                                          child: Column(
                                            key: ValueKey('SignUpp_473q'),
                                            mainAxisSize: MainAxisSize.max,
                                            mainAxisAlignment:
...
                                                  child: TextFormField(
                                                    key: ValueKey(
                                                        'emailAddress_Create_c91l'),
                                                    controller: _model
                                                        .emailAddressCreateTextController,
...
                                                  child: TextFormField(
                                                    key: ValueKey(
                                                        'password_Create_6l5m'),
                                                    controller: _model
                                                        .passwordCreateTextController,
...
                                                  child: TextFormField(
                                                    key: ValueKey(
                                                        'passwordConfirm_fdsk'),
                                                    controller: _model
                                                        .passwordConfirmTextController,
...
                                                  child: FFButtonWidget(
                                                    key: ValueKey(
                                                        'SignUpButton_rorj'),
                                                    onPressed: () async {
                                                      logFirebaseEvent(
...
