...
                                  16.0, 12.0, 16.0, 0.0),
                              child: Column(
                                mainAxisSize: MainAxisSize.max,
                                crossAxisAlignment: CrossAxisAlignment.start,
                                children: [
                                  TextFormField(
                                    key: ValueKey('taskTitle_40mr'),
                                    controller: _model.taskTitleTextController,
                                    focusNode: _model.taskTitleFocusNode,
                                    autofocus: true,
                                    textCapitalization: TextCapitalization.none,
                                    obscureText: false,
                                    decoration: InputDecoration(
...
                                                    TextCapitalization.none),
                                          );
                                        }),
                                    ],
                                  ),
                                  TextFormField(
                                    key: ValueKey('description_hugd'),
                                    controller:
                                        _model.descriptionTextController,
                                    focusNode: _model.descriptionFocusNode,
                                    autofocus: true,
                                    textCapitalization: TextCapitalization.none,
                                    obscureText: false,
...
                                        width: 2.0,
                                      ),
                                    ),
                                    child: Container(
                                      width: 200.0,
                                      child: TextFormField(
                                        key: ValueKey('labelText_vp6n'),
                                        controller:
                                            _model.labelTextTextController,
                                        focusNode: _model.labelTextFocusNode,
                                        autofocus: false,
                                        enabled: true,
                                        obscureText: false,
...
                                          _model.datePicked =
                                              getCurrentTimestamp;
                                        });
                                      }
                                    },
                                    child: Container(
                                      key: ValueKey('DateContainer_xa4s'),
                                      width: double.infinity,
                                      height: 48.0,
                                      decoration: BoxDecoration(
                                        color: FlutterFlowTheme.of(context)
                                            .secondaryBackground,
                                        borderRadius:
...
                  ),
                  decoration: BoxDecoration(),
                  child: Padding(
                    padding:
                        EdgeInsetsDirectional.fromSTEB(16.0, 12.0, 16.0, 12.0),
                    child: FFButtonWidget(
                      key: ValueKey('Button_j0ds'),
                      onPressed: () async {
                        logFirebaseEvent('CREATE_TASK_PAGE_CREATE_BTN_ON_TAP');
                        if ((_model.taskTitleTextController.text == '') ||
                            (_model.descriptionTextController.text == '') ||
                            (_model.labelTextTextController.text == '') ||
                            (_model.datePicked == null)) {
...
