...
                                GoRouter.of(context).clearRedirectLocation();

                                context.goNamedAuth(SignUpPageWidget.routeName,
                                    context.mounted);
                              },
                              child: FlutterFlowIconButton(
                                key: ValueKey('SignOutButton_koqx'),
                                borderRadius: 8.0,
                                buttonSize: 40.0,
                                hoverIconColor:
                                    FlutterFlowTheme.of(context).error,
                                icon: Icon(
                                  Icons.logout,
...
                                ),
                              ),
                              child: Padding(
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    6.0, 8.0, 6.0, 8.0),
                                child: Row(
                                  key: ValueKey('Row_znt5'),
                                  mainAxisSize: MainAxisSize.max,
                                  children: [
                                    Icon(
                                      Icons.add_rounded,
                                      color: Colors.white,
                                      size: 14.0,
...
                                  'TASK_LIST_PAGE_Icon_7nqc5b50_ON_TAP');
                              logFirebaseEvent('Icon_navigate_to');

                              context.goNamed(CalendarPageWidget.routeName);
                            },
                            child: Icon(
                              key: ValueKey('Icon_6ji8'),
                              Icons.calendar_month,
                              color: FlutterFlowTheme.of(context).primaryText,
                              size: 36.0,
                            ),
                          ),
                        ),
...
                                          itemBuilder:
                                              (context, listViewIndex) {
                                            final listViewTaskDataRecord =
                                                listViewTaskDataRecordList[
                                                    listViewIndex];
                                            return Container(
                                              key: ValueKey('Task_mewj'),
                                              child: TaskWidget(
                                                key: Key(
                                                    'Keyzhn_${listViewIndex}_of_${listViewTaskDataRecordList.length}'),
                                                tasksDoc:
                                                    listViewTaskDataRecord,
                                                completion: () async {
...
