...
                    logFirebaseEvent('IconButton_navigate_to');

                    context.goNamed(TaskListWidget.routeName);
                  },
                ),
                Text(
                  'Profile',
                  style: FlutterFlowTheme.of(context).bodyMedium.override(
                        font: GoogleFonts.inter(
                          fontWeight: FontWeight.bold,
                          fontStyle:
                              FlutterFlowTheme.of(context).bodyMedium.fontStyle,
                        ),
...
